# SoltysGame

./: .gitignore  CMakeLists.txt  CMakeSettings.json  Set-VsVars.ps1
cmake/: FindAllegro5.cmake  GetGitRevisionDescription.cmake  GetGitRevisionDescription.cmake.in  LimitConfiguration.cmake  VCPKGCheck.cmake  dependecies.cmake
game/: CMakeLists.txt  EntityFactory.cpp  Game.cpp  Game.h  GameContext.hpp  GameObject.hpp  GameTime.hpp  KeyMapService.cpp  Locator.cpp  Locator.h  LogWindow.cpp  LogWindow.h  OldGame.cpp  OldGame.h  Paddle.cpp  Paddle.h  Resources.hpp  SFMLMain.cpp  Utils.cpp  Utils.h  config.hpp.in  game.rc.in  main.cpp  pack.json
game/Logging/: CompositeLogger.cpp  CompositeLogger.h  ConsoleLogger.cpp  DbLogger.cpp  DbLogger.h  LogWindow.cpp  LogWindow.h  Logger.h  NullLogger.cpp  NullLogger.h  WindowsDebugLogger.cpp  WindowsDebugLogger.h
game/assets/: CMakeLists.txt  pack.Debug.json  pack.Release.json  pack.json
game/assets/scripts/: add_ball.lua
game/core/: EnttArchive.cpp  GameSettingsService.cpp  KeyMapService.cpp  PackerProvider.cpp  ToggleService.cpp
game/include/game/: DeferAction.hpp  EntityFactory.h  EntityFactory.hpp  Game.h  Game.hpp  GameContext.hpp  GameObject.hpp  GameTime.hpp  KeyMapService.h  Locator.h  Locator.hpp  Paddle.h  PaddleConfig.h  Resources.h  Utils.h  Utils.hpp
game/include/game/Logging/: CompositeLogger.h  ConsoleLogger.h  DbLogger.h  LogWindow.h  NullLogger.h  WindowsDebugLogger.h
game/include/game/composition/: composition.hpp
game/include/game/core/: EnttArchive.h  EnttArchive.hpp  FontService.hpp  GameSettingsService.h  KeyMapService.h  MemoryCacheToggleService.hpp  PackerToggleService.hpp  ToggleService.hpp
game/include/game/logging/: ConsoleLogger.hpp  NullLogger.hpp
game/include/game/system/: system.h
game/system/: collision.cpp  render.cpp  render.h  render.hpp  system.cpp
include/game/: Game.hpp  GameContext.hpp  GameTime.hpp  Locator.hpp  Utils.hpp
include/game/composition/: composition.hpp
include/game/core/: EnttArchive.hpp  FontService.hpp  GameInput.hpp  PackerProvider.hpp
include/game/logging/: CompositeLogger.hpp  DbLogger.hpp  WindowsDebugLogger.hpp
include/game/system/: system.hpp
src/: main.cpp
tools/: CMakeLists.txt
tools/compressor/: CMakeLists.txt  compressor_main.cpp
tools/merge_pack_json/: CMakeLists.txt  merge_pack_json_main.cpp
